2006-05-20  Tristan Van Berkom <tvb@gnome.org>

	* src/dh-search.c:
	  o Added a search source distinction... to mark whether the
	    search string has been requested through the dh-search api
	    or from the entries themselves.
	  o When the advanced box is hidden... ignore book and page buffers
	    if the search comes from the entry.
	  o Set book & page entries upon gtk_widget_show (i.e. gconf setting)
	  o destroy book & page buffers when setting the entry (so as not to
	    re-enable those when the advanced_box shows up).
	
2006-05-17  Tristan Van Berkom <tvb@gnome.org>

	* src/dh-search.c: Added a abstraction buffers in the DhSearch cleaning
	  up the code a little and allowing for the dh_search_set_search_string() 
	  api to work properly with the advanced box hidden.

2006-05-16  Richard Hult  <richard@imendio.com>

	* Makefile.am:
	* configure.in:
	* devhelp.keys.in:
	* devhelp.mime: Remove obsolete and unused mime/keys files.

	* src/dh-main.c: (main): Improve the option strings a bit.

	* ui/devhelp.glade:
	* src/dh-base.[ch:]
	* src/dh-search.[ch]:
	* src/dh-preferences.[ch]: Clean up a bit, and add a
	preference for showing/hiding the new search fields.

	* ui/Makefile.am: Dist the svg, fixes distcheck.

2006-05-15  Tristan Van Berkom <tvb@gnome.org>

	* configure.in: Bumping version to 0.12 in cvs.

2006-05-03  Tristan Van Berkom <tvb@gnome.org>

	* src/dh-search.c: Fixed the glitches when dragging the paned over
	  the book & page entries.

	* src/dh-preferences.c:
	  o Dont build dialog in dh_preferences_init();
	  o Build the dialog every time we show it and 
	    destroy it in the "close" handler.
	  o When recieving settings updates through gconf, 
	    check that the dialog currently exists before 
	    setting the button activity/sensitivity.
	  o Now only one code segment is responsable for updating the
	    gecko fonts, usually run in an idle handler.

2006-05-03  Tristan Van Berkom <tvb@gnome.org>
